Do not generate the schema api in unit tests

--- a/kdoc-base/src/test/resources/application.conf
+++ b/kdoc-base/src/test/resources/application.conf
@@ -13,9 +13,9 @@ runtime {
 }
 
 database {
-	jdbcUrl = "jdbc:h2:mem:regular;DB_CLOSE_DELAY=-1;"
+	jdbcUrl: "jdbc:h2:mem:regular;DB_CLOSE_DELAY=-1;"
 }
 
 apiSchema {
-	isEnabled: false
+	environments: []
 }
