--- a/kdoc-server/src/main/resources/openapi/documentation.yaml
+++ b/kdoc-server/src/main/resources/openapi/documentation.yaml
@@ -149,7 +149,7 @@ paths:
                   description: ""
                   value: "/rbac/login"
         "200":
-          description: "OK <br> Respond with HTML view of the RBAC admin panel."
+          description: "OK <br> Respond with HTML view of the RBAC dashboard."
           content:
             text/plain:
               schema:
