--- a/kdoc-server/src/main/resources/openapi/documentation.yaml
+++ b/kdoc-server/src/main/resources/openapi/documentation.yaml
@@ -44,7 +44,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/Page_? extends DocumentEntity"
+                $ref: "#/components/schemas/Page_? extends DocumentDto"
   /auth/token/create:
     post:
       description: "Creates a new token and responds with it."
@@ -306,7 +306,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/Page_? extends DocumentEntity"
+                $ref: "#/components/schemas/Page_? extends DocumentDto"
   /v1/document/{document_id}:
     delete:
       description: "Delete a document by ID."
@@ -353,7 +353,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/DocumentEntity"
+                $ref: "#/components/schemas/DocumentDto"
         "404":
           description: "Not Found"
           content:
@@ -416,7 +416,7 @@ paths:
               schema:
                 type: "array"
                 items:
-                  $ref: "#/components/schemas/DocumentEntity"
+                  $ref: "#/components/schemas/DocumentDto"
   /v1/document/backup:
     get:
       description: "Downloads a backup file containing all the documents."
@@ -554,7 +554,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/Page_? extends DocumentEntity"
+                $ref: "#/components/schemas/Page_? extends DocumentDto"
   /v1/document/owner/{owner_id}:
     get:
       description: "Find all documents by owner."
@@ -586,7 +586,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/Page_? extends DocumentEntity"
+                $ref: "#/components/schemas/Page_? extends DocumentDto"
   /v1/document/url/{document_id}/{group_id}:
     get:
       description: "Generate the signed URL for a document download."
@@ -666,7 +666,7 @@ components:
           type: "array"
       required:
         - "content"
-    Page_? extends DocumentEntity:
+    Page_? extends DocumentDto:
       type: "object"
       properties:
         totalPages:
@@ -1058,7 +1058,7 @@ components:
       required:
         - "createdAt"
         - "updatedAt"
-    DocumentEntity:
+    DocumentDto:
       type: "object"
       properties:
         id:
