--- a/kdoc-server/src/main/resources/openapi/documentation.yaml
+++ b/kdoc-server/src/main/resources/openapi/documentation.yaml
@@ -33,12 +33,6 @@ paths:
             items:
               type: "string"
       responses:
-        "400":
-          description: "Bad Request"
-          content:
-            application/json:
-              schema:
-                type: "string"
         "200":
           description: "OK"
           content:
@@ -272,7 +266,7 @@ paths:
                 $ref: "#/components/schemas/SnowflakeData"
   /v1/document:
     delete:
-      description: "Delete all documents."
+      description: "Delete all Document entries."
       responses:
         "200":
           description: "OK"
@@ -292,12 +286,6 @@ paths:
             items:
               type: "string"
       responses:
-        "400":
-          description: "Bad Request"
-          content:
-            application/json:
-              schema:
-                type: "string"
         "200":
           description: "OK"
           content:
@@ -382,19 +370,10 @@ paths:
               examples:
                 Example#1:
                   value: "Invalid request."
-            application/json:
-              schema:
-                type: "string"
         "500":
           description: "Internal Server Error"
           content:
             '*/*':
-              schema:
-                type: "string"
-        "404":
-          description: "Not Found"
-          content:
-            application/json:
               schema:
                 type: "string"
         "201":
@@ -418,18 +397,6 @@ paths:
               examples:
                 Example#1:
                   value: "No documents found."
-        "400":
-          description: "Bad Request"
-          content:
-            application/json:
-              schema:
-                type: "string"
-        "404":
-          description: "Not Found"
-          content:
-            application/json:
-              schema:
-                type: "string"
   /v1/document/cipher/{cipher}:
     put:
       description: "Changes the cipher state of all documents."
@@ -465,9 +432,6 @@ paths:
         "400":
           description: "Bad Request"
           content:
-            application/json:
-              schema:
-                type: "string"
             '*/*':
               schema:
                 type: "string"
@@ -483,12 +447,6 @@ paths:
               examples:
                 Example#1:
                   value: "Unable to initiate download."
-        "404":
-          description: "Not Found"
-          content:
-            application/json:
-              schema:
-                type: "string"
   /v1/document/group/{group_id}:
     delete:
       description: "Delete all documents by group."
@@ -531,9 +489,6 @@ paths:
         "400":
           description: "Bad Request"
           content:
-            application/json:
-              schema:
-                type: "string"
             '*/*':
               schema:
                 type: "string"
@@ -563,9 +518,6 @@ paths:
         "400":
           description: "Bad Request"
           content:
-            application/json:
-              schema:
-                type: "string"
             '*/*':
               schema:
                 type: "string"
